review remarks